--- a/apps/macos/AgentsWorkflow/AgentsWorkflow/AgentsWorkflow.entitlements
+++ b/apps/macos/AgentsWorkflow/AgentsWorkflow/AgentsWorkflow.entitlements
@@ -9,7 +9,9 @@
 		<string>com.agentsworkflow.shared</string>
 	</array>
 	<key>com.apple.developer.system-extension.install</key>
-	<true/>
+	<array>
+		<string>com.agentsworkflow.AgentFSKitExtension</string>
+	</array>
 	<key>com.apple.developer.fskit.fsmodule</key>
 	<true/>
 	<key>com.apple.security.files.user-selected.read-write</key>
