--- a/tests/sandbox-integration/Cargo.toml
+++ b/tests/sandbox-integration/Cargo.toml
@@ -1,22 +1,17 @@
 [package]
-name = "sandbox-integration-tests"
+name = "sandbox-integration"
 version = "0.1.0"
 edition = "2021"
 
 [lib]
-name = "sandbox_integration_tests"
 path = "main.rs"
 
-[features]
-cgroups = []
-
 [dependencies]
-tokio = { workspace = true }
-sandbox-core = { path = "../../crates/sandbox-core", features = ["cgroups"] }
-sandbox-fs = { path = "../../crates/sandbox-fs" }
-tempfile = "3.0"
+anyhow = { workspace = true }
+tracing = { workspace = true }
+tracing-subscriber = { workspace = true }
+tempfile = { workspace = true }
 
-[target.'cfg(target_os = "linux")'.dependencies]
-sandbox-core = { path = "../../crates/sandbox-core", features = ["cgroups"] }
-sandbox-fs = { path = "../../crates/sandbox-fs" }
-tempfile = "3.0"
+[target.'cfg(target_os = "macos")'.dependencies]
+aw-sandbox-macos = { path = "../../crates/aw-sandbox-macos" }
+which = "6"
