fix(project-setup): fix the zero-to-hero experience on Linux by building all test binaries automatically

--- a/tests/sandbox-integration/Cargo.toml
+++ b/tests/sandbox-integration/Cargo.toml
@@ -11,6 +11,9 @@ anyhow = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
 tempfile = { workspace = true }
+tokio = { workspace = true }
+sandbox-core = { path = "../../crates/sandbox-core" }
+sandbox-fs = { path = "../../crates/sandbox-fs" }
 
 [target.'cfg(target_os = "macos")'.dependencies]
 aw-sandbox-macos = { path = "../../crates/aw-sandbox-macos" }
