--- a/webui/app/package.json
+++ b/webui/app/package.json
@@ -5,19 +5,41 @@
   "main": "dist/index.js",
   "type": "module",
   "scripts": {
-    "build": "vinxi build",
-    "build:client": "vinxi build --mode client",
-    "build:server": "vinxi build --mode server",
-    "dev": "vinxi dev",
-    "start": "vinxi start",
+    "build": "npx vinxi build",
+    "build:client": "npx vinxi build --mode client",
+    "build:server": "npx vinxi build --mode server",
+    "dev": "npx vinxi dev",
+    "start": "npx vinxi start",
     "lint": "eslint src --ext .ts,.tsx,.js,.jsx",
     "lint:fix": "eslint src --ext .ts,.tsx,.js,.jsx --fix",
     "format": "prettier --write src/**/*.{ts,tsx,js,jsx,json}",
     "format:check": "prettier --check src/**/*.{ts,tsx,js,jsx,json}",
     "type-check": "tsc --noEmit",
+    "knip": "knip",
+    "knip:strict": "knip --strict",
+    "type-coverage": "type-coverage",
     "test": "vitest",
     "test:run": "vitest run",
     "test:coverage": "vitest --coverage"
+  },
+  "typeCoverage": {
+    "atLeast": 95,
+    "detail": true,
+    "strict": true,
+    "ignoreCatch": false,
+    "cache": true,
+    "tsconfig": "tsconfig.json",
+    "include": [
+      "src/**/*.ts",
+      "src/**/*.tsx"
+    ],
+    "exclude": [
+      "**/*.d.ts",
+      "**/__tests__/**",
+      "**/__mocks__/**",
+      "e2e-tests/**",
+      "tests/**"
+    ]
   },
   "keywords": [
     "ssr",
@@ -34,22 +56,31 @@
     "@solidjs/start": "^1.1.0",
     "solid-js": "^1.9.5",
     "tom-select": "^2.4.3",
-    "vinxi": "^0.5.7"
+    "vinxi": "^0.5.8"
   },
   "devDependencies": {
     "@solidjs/testing-library": "^0.8.10",
+    "@tailwindcss/typography": "^0.5.19",
     "@tailwindcss/vite": "^4.0.7",
+    "@testing-library/jest-dom": "^6.9.0",
     "@types/node": "^24.5.2",
     "@typescript-eslint/eslint-plugin": "^8.15.0",
     "@typescript-eslint/parser": "^8.15.0",
     "cheerio": "^1.1.2",
     "eslint": "^9.15.0",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-better-tailwindcss": "^3.7.9",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-solid": "^0.14.5",
+    "eslint-plugin-tailwindcss": "^4.0.0-beta.0",
     "jsdom": "^24.1.0",
+    "knip": "^5.64.1",
     "prettier": "^3.3.3",
     "tailwindcss": "^4.0.7",
+    "type-coverage": "^2.29.7",
     "typescript": "^5.7.2",
+    "vite-plugin-checker": "^0.11.0",
     "vitest": "^2.0.5"
   },
   "engines": {
