--- a/.editorconfig
+++ b/.editorconfig
@@ -1,5 +1,6 @@
 root = true
 
+# Default settings for all files
 [*]
 charset = utf-8
 end_of_line = lf
@@ -8,5 +9,47 @@ trim_trailing_whitespace = true
 indent_style = space
 indent_size = 2
 
+# Rust
+[*.rs]
+indent_size = 4
+
+# Swift
+[*.swift]
+indent_size = 4
+
+# Python
+[*.py]
+indent_size = 4
+
+# Shell scripts
+[*.{sh,bash,zsh}]
+indent_size = 4
+
+# Ruby
 [*.{rb,rake}]
 indent_size = 2
+
+# Nix
+[*.nix]
+indent_size = 2
+
+# YAML
+[*.{yml,yaml}]
+indent_size = 2
+
+# JSON
+[*.json]
+indent_size = 2
+
+# Markdown
+[*.md]
+indent_size = 2
+trim_trailing_whitespace = false
+
+# Justfile
+[Justfile]
+indent_style = space
+
+# Makefiles
+[Makefile*]
+indent_style = tab
