--- a/webui/app/.gitignore
+++ b/webui/app/.gitignore
@@ -1,10 +1,4 @@
-# Dependencies
-node_modules/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Build outputs
+# Build outputs (handled by root .gitignore)
 dist/
 build/
 .output/
@@ -39,10 +33,6 @@ pids/
 
 # TypeScript
 *.tsbuildinfo
-
-# SolidStart
-.vinxi/
-.output/
 
 # Temporary folders
 tmp/
