--- a/webui/e2e-tests/.gitignore
+++ b/webui/e2e-tests/.gitignore
@@ -1,14 +1,10 @@
-# Dependencies
-node_modules/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Test results
+# Test results and artifacts
 test-results/
 playwright-report/
 playwright/.cache/
 results.xml
+screenshots/
+videos/
 
 # Environment variables
 .env
@@ -31,35 +27,21 @@ Thumbs.db
 logs/
 *.log
 
-# Coverage directory used by tools like istanbul
+# Coverage
 coverage/
 *.lcov
 
-# Dependency directories
-jspm_packages/
-
-# Optional npm cache directory
-.npm
-
-# Optional eslint cache
+# Cache
 .eslintcache
 
-# Optional REPL history
+# Legacy npm files (should not exist but ignore if present)
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+jspm_packages/
+.npm
 .node_repl_history
-
-# Output of 'npm pack'
 *.tgz
-
-# Yarn Integrity file
 .yarn-integrity
-
-# Screenshots/videos from failed tests
-test-results/
-screenshots/
-videos/
-
-# Backup files
 *.backup
-
-# Playwright browser cache
-playwright/.cache/
