--- a/webui/mock-server/.gitignore
+++ b/webui/mock-server/.gitignore
@@ -1,10 +1,4 @@
-# Dependencies
-node_modules/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Build outputs
+# Build outputs (handled by root .gitignore)
 dist/
 build/
 
@@ -39,23 +33,8 @@ pids/
 coverage/
 *.lcov
 
-# Dependency directories
-jspm_packages/
-
-# Optional npm cache directory
-.npm
-
 # Optional eslint cache
 .eslintcache
 
 # TypeScript
 *.tsbuildinfo
-
-# Optional REPL history
-.node_repl_history
-
-# Output of 'npm pack'
-*.tgz
-
-# Yarn Integrity file
-.yarn-integrity
