--- a/webui/mock-server/package.json
+++ b/webui/mock-server/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "build": "tsc",
-    "dev": "tsx watch src/index.ts",
+    "dev": "yarn tsx watch src/index.ts",
     "start": "node dist/index.js",
     "lint": "eslint src --ext .ts,.js",
     "lint:fix": "eslint src --ext .ts,.js --fix",
