feat(yarn): Fix the TypeScript environment in VS Code; Add the yarn outdated plugin
The outdated plugin has been used to bump all dependencies except playwright to their version. Playwright must be held back because the latest version requires different browsers than the one instaled by Nix

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -42,5 +42,12 @@
     "*.nix": "nix",
     "flake.nix": "nix",
     "flake.lock": "json"
-  }
+  },
+  "search.exclude": {
+    "**/.yarn": true,
+    "**/.pnp.*": true
+  },
+  "typescript.tsdk": ".yarn/sdks/typescript/lib",
+  "typescript.enablePromptUseWorkspaceTsdk": true,
+  "eslint.nodePath": ".yarn/sdks"
 }
