feat(tui): Implementation of 'ah agent start' and a new TUI testing framework

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,6 +41,7 @@ members = [
   "crates/ah-tui-multiplexer",
   "crates/ah-tui-test",
   "crates/ah-tui",
+  "crates/tui-testing",
   "crates/ah-macos-launcher",
   # CLI
   "crates/ah-cli",
