--- a/crates/ah-cli/Cargo.toml
+++ b/crates/ah-cli/Cargo.toml
@@ -69,4 +69,6 @@ winapi = { version = "0.3", features = [
 ] }
 
 [dev-dependencies]
+tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
 tempfile = { workspace = true }
+tui-testing = { path = "../tui-testing" }
