--- a/crates/ah-mux/Cargo.toml
+++ b/crates/ah-mux/Cargo.toml
@@ -23,7 +23,8 @@ screen = []
 
 [dev-dependencies]
 tokio-test = "0.4"
-expectrl = "0.3"
+expectrl = { version = "0.3", features = ["async"] }
+futures-lite = "1.13"
 vt100 = "0.15"
 insta = { version = "1.40", features = ["json"] }
 anyhow = "1.0"
