--- a/crates/tui-testing/Cargo.toml
+++ b/crates/tui-testing/Cargo.toml
@@ -6,7 +6,7 @@ description = "TUI testing framework with IPC-based screenshot capture"
 license = "MIT OR Apache-2.0"
 
 [[bin]]
-name = "tui-testing-screenshot"
+name = "tui-testing-cmd"
 path = "src/bin.rs"
 
 [[bin]]
@@ -22,6 +22,7 @@ tmq = "0.5"
 async-trait = { workspace = true }
 tempfile = "3.0"
 expectrl = { version = "0.3", features = ["async"] }
+nix = { version = "0.27", features = ["signal"] }
 futures-lite = "1.13"
 futures = "0.3"
 vt100 = "0.15"
