--- a/tests/tools/mock-agent/pyproject.toml
+++ b/tests/tools/mock-agent/pyproject.toml
@@ -5,7 +5,10 @@ description = "A mock coding agent that emits thinking traces, tool-use messages
 readme = "README.md"
 requires-python = ">=3.9"
 authors = [{ name = "Zahary Karadjov", email = "zahary@blocksense.network" }]
-dependencies = []
+dependencies = [
+    "pyyaml>=6.0",
+    "yamllint>=1.32.0",
+]
 
 [project.optional-dependencies]
 test = ["pytest", "pexpect"]
