--- a/crates/agentfs-core/Cargo.toml
+++ b/crates/agentfs-core/Cargo.toml
@@ -9,6 +9,9 @@ serde_json = { workspace = true }
 thiserror = { workspace = true }
 anyhow = { workspace = true }
 tracing = { workspace = true }
+libc = { workspace = true }
+hex = { workspace = true }
 
 [dev-dependencies]
 tempfile = { workspace = true }
+mockall = { workspace = true }
