--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
-[submodule "third_party/codex"]
-	path = third-party/codex
+[submodule "vendor/codex"]
+	path = vendor/codex
 	url = https://github.com/blocksense-network/codex
+[submodule "vendor/tui-textarea"]
+	path = vendor/tui-textarea
+	url = git@github.com:blocksense-network/tui-textarea.git
