--- a/crates/ah-core/Cargo.toml
+++ b/crates/ah-core/Cargo.toml
@@ -14,6 +14,7 @@ anyhow.workspace = true
 thiserror.workspace = true
 chrono = { version = "0.4", features = ["serde"] }
 ah-repo = { path = "../ah-repo" }
+ah-workflows = { path = "../ah-workflows" }
 ah-local-db = { path = "../ah-local-db" }
 ureq = { version = "2.0", features = ["json"] }
 tempfile = "3.0"
