--- a/crates/ah-repo/Cargo.toml
+++ b/crates/ah-repo/Cargo.toml
@@ -12,7 +12,9 @@ regex = "1.10"
 dirs = "5.0"
 chrono = "0.4"
 tempfile = "3.8"
+futures = "0.3"
 
 [dev-dependencies]
 tempfile = "3.0"
-tokio = { version = "1.0", features = ["rt", "macros", "process", "io-util"] }
+tokio = { version = "1.0", features = ["rt", "macros", "process", "io-util", "rt-multi-thread", "test-util"] }
+futures = "0.3"
