feat(agent-cli): The foundations of the ah agent record command

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,6 +47,8 @@ members = [
   "crates/ah-tui",
   "crates/tui-testing",
   "crates/ah-macos-launcher",
+  # Recording and replay
+  "crates/ah-recorder",
   # Integration tests
   "tests/sandbox-integration",
   "tests/cgroup-enforcement",
