--- a/crates/ah-recorder/Cargo.toml
+++ b/crates/ah-recorder/Cargo.toml
@@ -27,6 +27,10 @@ crossterm = { workspace = true }
 ethereum_ssz = { workspace = true }
 ethereum_ssz_derive = { workspace = true }
 
+# Aliases for SSZ crates (matching daemon pattern)
+ssz = { package = "ethereum_ssz", version = "0.8" }
+ssz_derive = { package = "ethereum_ssz_derive", version = "0.8" }
+
 [dev-dependencies]
 tempfile = { workspace = true }
 tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
