--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,4 +1,10 @@
 {
-  "proseWrap": "preserve",
-  "embeddedLanguageFormatting": "off"
+  "semi": true,
+  "trailingComma": "es5",
+  "singleQuote": true,
+  "printWidth": 100,
+  "tabWidth": 2,
+  "useTabs": false,
+  "arrowParens": "always",
+  "endOfLine": "lf"
 }
