feat(agent-harbor-app): Electron-related justfile targets

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ members = [
   "crates/ah-cli",
   "crates/ah-config-types",
   "crates/ah-core",
+  "crates/ah-gui-core",
   "crates/ah-local-db",
   "crates/ah-repo",
   "crates/ah-fs-snapshots",
