feat(agent-record): Headless integration test for the ah agent record and ah agent branch-points

--- a/crates/ah-cli/Cargo.toml
+++ b/crates/ah-cli/Cargo.toml
@@ -60,6 +60,7 @@ ethereum_ssz_derive = "0.8"
 # Agent recording dependencies
 ah-recorder = { path = "../ah-recorder" }
 crossterm = { workspace = true }
+tempfile = { workspace = true }
 
 # Platform-specific dependencies
 [target.'cfg(unix)'.dependencies]
