--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,10 @@
 [workspace]
 members = [
   "crates/ah-cli",
+  # Agent abstraction layer (monolith + facades)
+  "crates/ah-agents",
+  "crates/ah-agent-claude",
+  "crates/ah-agent-codex",
   "crates/ah-config-types",
   "crates/ah-core",
   "crates/ah-gui-core",
