--- a/electron-app/package.json
+++ b/electron-app/package.json
@@ -28,7 +28,7 @@
     "@typescript-eslint/parser": "^8.18.1",
     "electron": "33.4.11",
     "electron-builder": "^25.1.8",
-    "eslint": "^9.17.0",
+    "eslint": "9.37.0",
     "prettier": "^3.4.2",
     "typescript": "^5.7.2",
     "vite": "^6.0.3",
