--- a/webui/app/package.json
+++ b/webui/app/package.json
@@ -68,7 +68,7 @@
     "@typescript-eslint/eslint-plugin": "^8.15.0",
     "@typescript-eslint/parser": "^8.15.0",
     "cheerio": "^1.1.2",
-    "eslint": "^9.15.0",
+    "eslint": "9.37.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-better-tailwindcss": "^3.7.9",
     "eslint-plugin-jsx-a11y": "^6.10.2",
