--- a/webui/mock-server/package.json
+++ b/webui/mock-server/package.json
@@ -35,7 +35,7 @@
     "@types/express": "^5.0.0",
     "@types/morgan": "^1.9.9",
     "@types/node": "^24.6.2",
-    "eslint": "^9.15.0",
+    "eslint": "9.37.0",
     "prettier": "^3.3.3",
     "tsx": "^4.19.1",
     "typescript": "^5.6.3"
