--- a/electron-app/package.json
+++ b/electron-app/package.json
@@ -30,7 +30,7 @@
     "electron-builder": "^25.1.8",
     "eslint": "9.37.0",
     "prettier": "^3.4.2",
-    "typescript": "^5.7.2",
+    "typescript": "5.9.3",
     "vite": "^6.0.3",
     "vite-plugin-electron": "^0.28.8",
     "vite-plugin-electron-renderer": "^0.14.5"
