--- a/webui/app/package.json
+++ b/webui/app/package.json
@@ -80,7 +80,7 @@
     "prettier": "^3.3.3",
     "tailwindcss": "^4.0.7",
     "type-coverage": "^2.29.7",
-    "typescript": "^5.7.2",
+    "typescript": "5.9.3",
     "vite": "^7.1.9",
     "vite-plugin-checker": "^0.11.0",
     "vite-plugin-solid": "^2.11.9",
