--- a/webui/mock-server/package.json
+++ b/webui/mock-server/package.json
@@ -38,7 +38,7 @@
     "eslint": "9.37.0",
     "prettier": "^3.3.3",
     "tsx": "^4.19.1",
-    "typescript": "^5.6.3"
+    "typescript": "5.9.3"
   },
   "engines": {
     "node": ">=22"
