--- a/webui/shared/package.json
+++ b/webui/shared/package.json
@@ -43,6 +43,6 @@
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
     "type-coverage": "^2.29.7",
-    "typescript": "^5.9.2"
+    "typescript": "5.9.3"
   }
 }
