--- a/electron-app/package.json
+++ b/electron-app/package.json
@@ -29,7 +29,7 @@
     "electron": "33.4.11",
     "electron-builder": "^25.1.8",
     "eslint": "9.37.0",
-    "prettier": "^3.4.2",
+    "prettier": "3.6.2",
     "typescript": "5.9.3",
     "vite": "^6.0.3",
     "vite-plugin-electron": "^0.28.8",
