--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "eslint": "9.37.0",
     "knip": "^5.64.1",
+    "prettier": "3.6.2",
     "typescript": "5.9.3",
     "vite": "^7.1.9"
   },
