--- a/webui/app/package.json
+++ b/webui/app/package.json
@@ -77,7 +77,7 @@
     "eslint-plugin-tailwindcss": "^4.0.0-beta.0",
     "jsdom": "^27.0.0",
     "knip": "^5.64.1",
-    "prettier": "^3.3.3",
+    "prettier": "3.6.2",
     "tailwindcss": "^4.0.7",
     "type-coverage": "^2.29.7",
     "typescript": "5.9.3",
