--- a/webui/mock-server/package.json
+++ b/webui/mock-server/package.json
@@ -36,7 +36,7 @@
     "@types/morgan": "^1.9.9",
     "@types/node": "^24.6.2",
     "eslint": "9.37.0",
-    "prettier": "^3.3.3",
+    "prettier": "3.6.2",
     "tsx": "^4.19.1",
     "typescript": "5.9.3"
   },
