--- a/webui/shared/package.json
+++ b/webui/shared/package.json
@@ -40,7 +40,7 @@
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
     "knip": "^5.64.1",
-    "prettier": "^3.6.2",
+    "prettier": "3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
     "type-coverage": "^2.29.7",
     "typescript": "5.9.3"
