--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -101,26 +101,32 @@ jobs:
           just legacy-test
 
   webui:
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, nixos, x86-64-v3]
 
     steps:
       - uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
         with:
-          node-version: '22'
+          submodules: 'recursive'
 
-      # TODO: We are using Yarn PnP, so this should be updated
-      - name: Cache Node.js dependencies
-        uses: actions/cache@v3
+      - name: Install Nix
+        uses: metacraft-labs/nixos-modules/.github/install-nix@main
         with:
-          path: |
-            ~/.npm
-            webui/*/node_modules
-          key: ${{ runner.os }}-node-${{ hashFiles('webui/*/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-node-
+          cachix-auth-token: ${{ secrets.CACHIX_AUTH_TOKEN }}
+          cachix-cache: ${{ vars.CACHIX_CACHE }}
+          trusted-public-keys: ${{ vars.TRUSTED_PUBLIC_KEYS }}
+          substituters: ${{ vars.SUBSTITUTERS }}
+
+      - name: Build & activate the Nix Dev Shell
+        run: |
+          nix print-dev-env --accept-flake-config --impure .#devShells.x86_64-linux.default > dev-env.sh || exit 1
+          source dev-env.sh
+          echo "PATH=$PATH" >> "$GITHUB_ENV"
+          echo "NIX_PATH=$NIX_PATH" >> "$GITHUB_ENV"
+          echo "NIX_PROFILES=$NIX_PROFILES" >> "$GITHUB_ENV"
+          echo "NIX_REMOTE=$NIX_REMOTE" >> "$GITHUB_ENV"
+
+      - name: Install JS deps
+        run: yarn install
 
       - name: Install dependencies
         run: just webui-install
