--- a/tests/tools/mock-agent/scenarios/basic_timeline_scenario.yaml
+++ b/tests/tools/mock-agent/scenarios/basic_timeline_scenario.yaml
@@ -5,7 +5,7 @@ timeline:
   - think:
       - [500, "Processing request for basic_timeline_scenario"]
   - agentToolUse:
-      toolName: "write_file"
+      toolName: "writeFile"
       args:
         path: "test.py"
         text: "print('Hello, timeline!')"
