--- a/tests/tools/mock-agent/scenarios/codex_file_creation.yaml
+++ b/tests/tools/mock-agent/scenarios/codex_file_creation.yaml
@@ -5,7 +5,7 @@ timeline:
   - think:
       - [500, "Processing request for codex_file_creation"]
   - agentToolUse:
-      toolName: "write_file"
+      toolName: "writeFile"
       args:
         path: "test.txt"
         text: "Test content for codex_file_creation"
