--- a/tests/tools/mock-agent/scenarios/feature_implementation_scenario.yaml
+++ b/tests/tools/mock-agent/scenarios/feature_implementation_scenario.yaml
@@ -5,7 +5,7 @@ timeline:
   - think:
       - [500, "Processing request for feature_implementation_scenario"]
   - agentToolUse:
-      toolName: "write_file"
+      toolName: "writeFile"
       args:
         path: "test.txt"
         text: "Test content for feature_implementation_scenario"
