--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,9 +2,9 @@
 members = [
   "crates/ah-cli",
   # Agent abstraction layer (monolith + facades)
-  "crates/ah-agents",
-  "crates/ah-agent-claude",
-  "crates/ah-agent-codex",
+  # "crates/ah-agents", # Temporarily disabled
+  # "crates/ah-agent-claude", # Temporarily disabled
+  # "crates/ah-agent-codex", # Temporarily disabled
   "crates/ah-config-types",
   "crates/ah-core",
   "crates/ah-gui-core",
@@ -55,6 +55,8 @@ members = [
   "crates/ah-macos-launcher",
   # Recording and replay
   "crates/ah-recorder",
+  # LLM API proxy
+  "crates/llm-api-proxy",
   # Integration tests
   "tests/sandbox-integration",
   "tests/cgroup-enforcement",
