build(direnv): Enable automatic use of nix binary caches specified in `flake.nix`

--- a/.envrc
+++ b/.envrc
@@ -1,7 +1,7 @@
 # Initialize git submodules if they haven't been cloned yet
 if [ ! -d "third-party/codex/.git" ]; then
-    echo "Initializing git submodules..."
-    git submodule update --init --recursive
+  echo "Initializing git submodules..."
+  git submodule update --init --recursive
 fi
 
-use flake
+use flake --accept-flake-config
