--- a/crates/ah-rest-api-contract/Cargo.toml
+++ b/crates/ah-rest-api-contract/Cargo.toml
@@ -13,6 +13,7 @@ chrono = { workspace = true }
 url = "2.5"
 uuid = { version = "1.0", features = ["v4", "serde"] }
 validator = { version = "0.18", features = ["derive"] }
+utoipa = { version = "4.0", features = ["chrono", "uuid"] }
 
 [dev-dependencies]
 tokio = { workspace = true }
