feat: implement TaskManager trait for REST service abstraction
Implement Milestone 2: TaskManager Trait Definition in ah-core

- Define TaskManager trait with async methods for task launching, event streaming, and data management
- Create domain types: TaskLaunchParams, TaskLaunchResult, SaveDraftResult
- Define event types: TaskEvent, TaskExecutionStatus, LogLevel, ToolStatus matching SSE API structure
- Reuse existing domain types from ah-domain-types: Repository, Branch, TaskInfo, SelectedModel
- Ensure trait is Send + Sync and async-trait compatible
- Rename existing concrete TaskManager to TaskStateManager to avoid naming conflicts
- Update ah-core exports and dependencies
- Align with REST API contract using chrono timestamps
- All tests pass and code compiles successfully

--- a/crates/ah-core/Cargo.toml
+++ b/crates/ah-core/Cargo.toml
@@ -16,7 +16,10 @@ chrono = { version = "0.4", features = ["serde"] }
 ah-repo = { path = "../ah-repo" }
 ah-workflows = { path = "../ah-workflows" }
 ah-local-db = { path = "../ah-local-db" }
+ah-domain-types = { path = "../ah-domain-types" }
 ureq = { version = "2.0", features = ["json"] }
 tempfile = "3.0"
 regex = "1.0"
 uuid = { version = "1.0", features = ["v4"] }
+async-trait.workspace = true
+futures.workspace = true
