feat: implement Mock REST client for TaskManager trait
Implement Milestone 3: Mock REST Client

- Create crates/ah-rest-mock-client implementing TaskManager trait from ah-core
- In-memory state management for tasks, drafts, repositories using Arc<RwLock>
- Mock implementations for all TaskManager trait methods with realistic behavior
- Simulated async operations compatible with tokio::time::pause() for accelerated testing
- Configurable delays for testing async behavior and race conditions
- Realistic SSE event stream generation with 50+ events matching API specification
- Support for failure injection and edge case simulation
- Deterministic task ID generation using hash-based approach for reproducible tests
- Thread-safe concurrent operation support using Tokio primitives
- Comprehensive test suite with 8 unit tests covering all functionality
- Compatible with existing TUI MVVM test patterns from PoC
- All tests pass with 100% success rate

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,6 +46,7 @@ members = [
   "crates/ah-rest-server",
   "crates/ah-test-scenarios",
   "crates/ah-rest-client-mock",
+  "crates/ah-rest-mock-client",
   "crates/ah-mux-core",
   "crates/ah-mux",
   "crates/ah-tui-multiplexer",
