--- a/crates/ah-rest-client/Cargo.toml
+++ b/crates/ah-rest-client/Cargo.toml
@@ -6,6 +6,8 @@ description = "REST API client for agent-harbor service"
 license = "MIT OR Apache-2.0"
 
 [dependencies]
+ah-core = { path = "../ah-core" }
+ah-domain-types = { path = "../ah-domain-types" }
 ah-rest-api-contract = { path = "../ah-rest-api-contract" }
 ah-client-api = { path = "../ah-client-api" }
 tokio = { workspace = true, features = ["full"] }
@@ -20,6 +22,9 @@ serde_json = { workspace = true }
 thiserror = { workspace = true }
 async-trait = { workspace = true }
 futures = "0.3"
+async-stream = "0.3"
+tracing = { workspace = true }
+chrono = { workspace = true }
 url = "2.5"
 base64 = "0.22"
 eventsource-client = "0.13"
