--- a/crates/ah-rest-client/Cargo.toml
+++ b/crates/ah-rest-client/Cargo.toml
@@ -16,6 +16,7 @@ reqwest = { version = "0.12", default-features = false, features = [
   "stream",
   "rustls-tls",
   "rustls-tls-native-roots",
+  "blocking",
 ] }
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
