--- a/crates/ah-tui/Cargo.toml
+++ b/crates/ah-tui/Cargo.toml
@@ -14,6 +14,8 @@ ah-rest-api-contract = { path = "../ah-rest-api-contract" }
 ah-client-api = { path = "../ah-client-api" }
 ah-rest-client = { path = "../ah-rest-client" }
 ah-test-scenarios = { path = "../ah-test-scenarios" }
+ah-domain-types = { path = "../ah-domain-types" }
+ah-core = { path = "../ah-core" }
 tokio = { workspace = true, features = ["full", "test-util"] }
 tokio-util = "0.7"
 ratatui = "0.29"
@@ -27,7 +29,7 @@ tracing-subscriber = { workspace = true, features = ["env-filter"] }
 futures = { workspace = true }
 unicode-width = { workspace = true }
 clap = { workspace = true, features = ["derive"] }
-ratatui-textarea = "0.3"
+tui-textarea = { path = "../../vendor/tui-textarea", features = ["search"] }
 similar = "2.5"
 ratatui-image = { version = "8", features = ["crossterm"] }
 image = { version = "0.25", default-features = false, features = ["png"] }
