--- a/crates/ah-core/Cargo.toml
+++ b/crates/ah-core/Cargo.toml
@@ -17,9 +17,12 @@ ah-repo = { path = "../ah-repo" }
 ah-workflows = { path = "../ah-workflows" }
 ah-local-db = { path = "../ah-local-db" }
 ah-domain-types = { path = "../ah-domain-types" }
+ah-rest-api-contract = { path = "../ah-rest-api-contract" }
 ureq = { version = "2.0", features = ["json"] }
 tempfile = "3.0"
 regex = "1.0"
 uuid = { version = "1.0", features = ["v4"] }
 async-trait.workspace = true
 futures.workspace = true
+async-stream = "0.3"
+url = "2.5"
