--- a/crates/ah-rest-mock-client/Cargo.toml
+++ b/crates/ah-rest-mock-client/Cargo.toml
@@ -8,6 +8,7 @@ license = "MIT OR Apache-2.0"
 [dependencies]
 ah-core = { path = "../ah-core" }
 ah-domain-types = { path = "../ah-domain-types" }
+ah-rest-api-contract = { path = "../ah-rest-api-contract" }
 async-trait.workspace = true
 chrono = { workspace = true }
 futures.workspace = true
@@ -15,4 +16,5 @@ rand = "0.8"
 serde = { workspace = true }
 serde_json.workspace = true
 tokio.workspace = true
+url = "2.5"
 uuid = { version = "1.0", features = ["v4"] }
