--- a/crates/ah-core/Cargo.toml
+++ b/crates/ah-core/Cargo.toml
@@ -18,6 +18,9 @@ ah-workflows = { path = "../ah-workflows" }
 ah-local-db = { path = "../ah-local-db" }
 ah-domain-types = { path = "../ah-domain-types" }
 ah-rest-api-contract = { path = "../ah-rest-api-contract" }
+ah-mux-core = { path = "../ah-mux-core" }
+ah-mux = { path = "../ah-mux" }
+ah-tui-multiplexer = { path = "../ah-tui-multiplexer" }
 ureq = { version = "2.0", features = ["json"] }
 tempfile = "3.0"
 regex = "1.0"
