fix(envrc): Fix syntax incompatibility with some versions of direnv

--- a/.envrc
+++ b/.envrc
@@ -4,4 +4,4 @@ if [ ! -d "third-party/codex/.git" ]; then
   git submodule update --init --recursive
 fi
 
-use flake --accept-flake-config
+use flake . --accept-flake-config
