refactor(gh-actions): Remove test steps
At this point the tests do not work. Let's remove them from the CI and
only test the building of webui. In the future, when we re-write it we
will turn them on

Co-authored-by: Mila Genova <mila.genova@blocksense.network>
Co-authored-by: Daniel Stoyanov <danielzstoyanov@gmail.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -143,13 +143,14 @@ jobs:
       - name: Build mock server
         run: just webui-build-mock
 
-      - name: Install Playwright browsers
-        run: just webui-install-browsers
+      # - name: Install Playwright browsers
+      #   run: just webui-install-browsers
 
-      - name: Run Playwright tests
-        run: just webui-test
-        env:
-          BASE_URL: http://localhost:3000
+      # TODO: Once tests are stable bring them back
+      # - name: Run Playwright tests
+      #   run: just webui-test
+      #   env:
+      #     BASE_URL: http://localhost:3000
 
   macos:
     runs-on: macos-latest
