--- a/crates/ah-domain-types/Cargo.toml
+++ b/crates/ah-domain-types/Cargo.toml
@@ -6,3 +6,8 @@ edition = "2021"
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
 chrono = "0.4"
+utoipa = { version = "4.0", optional = true }
+
+[features]
+default = []
+utoipa = ["dep:utoipa"]
