--- a/crates/ah-rest-api-contract/Cargo.toml
+++ b/crates/ah-rest-api-contract/Cargo.toml
@@ -6,7 +6,7 @@ description = "Schema types and validation for agent-harbor REST API contracts"
 license = "MIT OR Apache-2.0"
 
 [dependencies]
-ah-domain-types = { path = "../ah-domain-types" }
+ah-domain-types = { path = "../ah-domain-types", features = ["utoipa"] }
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
 thiserror = { workspace = true }
@@ -14,7 +14,11 @@ chrono = { workspace = true }
 url = "2.5"
 uuid = { version = "1.0", features = ["v4", "serde"] }
 validator = { version = "0.18", features = ["derive"] }
-utoipa = { version = "4.0", features = ["chrono", "uuid"] }
+utoipa = { version = "4.0", features = ["chrono", "uuid"], optional = true }
+
+[features]
+default = ["utoipa"]
+utoipa = ["dep:utoipa"]
 
 [dev-dependencies]
 tokio = { workspace = true }
